Closed Bug 1607101 Opened 5 years ago Closed 5 years ago

Fix some record/replay bugs

Categories

(Core Graveyard :: Web Replay, defect)

defect
Not set
normal

Tracking

(firefox73 fixed)

RESOLVED FIXED
mozilla73
Tracking Status
firefox73 --- fixed

People

(Reporter: bhackett1024, Assigned: bhackett1024)

References

Details

Attachments

(1 file)

The attached patch fixes some bugs introduced by the recent changes that are causing frequent crashes on TodoMVC.

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: