Bug 1607101 - Fix some record/replay bugs, r=jlast.

Differential Revision: https://phabricator.services.mozilla.com/D58728